[tool.poetry]
name = "pyjanus"
version = "0.1.0"
description = "janus-gateway python client"
authors = ["Jiang Yue"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyee = "^8.1.0"
websockets = "^9.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
